test/type/wrong/higherrank2.kk.out
test/type/wrong/higherrank2.kk(2, 5): error: types do not match (due to an infinite type)
 context : f(f)
 term : f
 inferred type: (_a) -> _e _b
 expected type: _a
 hint : annotate the function definition?