test/type/wrong/higherrank2.kk
fun auto(f) {
  f(f)
}